...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Title" />

            <EditText
                android:id="@+id/jobTitleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Company" />

            <EditText
                android:id="@+id/jobCompanyValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Location State" />

            <EditText
                android:id="@+id/jobLocation1Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Location City" />

            <EditText
                android:id="@+id/jobLocation2Value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="textPersonName" />
...
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:inputType="textPersonName"
                android:text="Cost of Living" />

            <EditText
                android:id="@+id/jobCostLivingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="number|numberDecimal" />
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Salary" />

            <EditText
                android:id="@+id/jobYearlySalaryValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Yearly Bonus" />

            <EditText
                android:id="@+id/jobYearlyBonusValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Retirement Benefits" />

            <EditText
                android:id="@+id/jobRetireBenefitValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="number|numberDecimal" />
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="Relocation Stipend" />

            <EditText
                android:id="@+id/jobRelocationStipendValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberSigned|numberDecimal"/>
...
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginLeft="20dp"
                android:text="RSU Award" />

            <EditText
                android:id="@+id/jobRSUAwardValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:layout_marginRight="20dp"
                android:inputType="numberSigned|numberDecimal"/>
...
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/jobExitButton"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="Back" />

...
